# engineering-team

./: .gitignore  README.md  example_requirements.txt  my_requirements.txt  pyproject.toml  requirements.txt
src/: __init__.py  agents.py  main.py  orchestrator.py  tools.py
src/config/: agents.yaml  tasks.yaml
